Fix cachedUsers dropdown long-username visibility issue, now using text-wrap when necessary

--- a/src/modules/Login/LoginWithPin.style.scss
+++ b/src/modules/Login/LoginWithPin.style.scss
@@ -15,7 +15,15 @@
 }
 
 .usernameContainer {
-  text-align: center;
+  text-align:center; 
+  min-width: 20rem;
+
+  a {
+    word-wrap: break-word;
+    overflow-x: auto;
+    display: inline;      
+  }
+
 }
 
 .username {
